<resources>
    <string name="app_name">NoteApp</string>
    <string name="my_notes">My Notes</string>
    <string name="search_your_note">Search Your Note...</string>
    <string name="search_icon">SearchIcon</string>
    <string name="title_activity_create_note">CreateNoteActivity</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
</resources>