<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/web_link"
        app:tint="@color/colorwhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_url"
        android:textColor="@color/colorwhite"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntubold"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@id/imageAddUrl"
        />

    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:textColorHint="@color/colorTextHint"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:textColor="@color/colorwhite"
        android:fontFamily="@font/ubuntumedium"
        app:layout_constraintTop_toBottomOf="@id/imageAddUrl"
        />
    
    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntumedium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntumedium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/colorAccent"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        />


</androidx.constraintlayout.widget.ConstraintLayout>