<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/MyNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_notes"
        android:textColor="@color/colorwhite"
        android:fontFamily="@font/ubuntubold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:textSize="@dimen/_20ssp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_seach"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/MyNote">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/seach_icon"
            app:tint="@color/colorSearchIcon"
            android:contentDescription="@string/search_icon">

        </ImageView>

        <EditText
            android:id="@+id/input_seach"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubunturegular"
            android:hint="@string/search_your_note"
            android:inputType="text"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorwhite"
            >
        </EditText>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layoutQuickAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionsBackground"
        android:padding="@dimen/_15sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/add_circle"
            app:tint="@color/colorIcons"
            android:layout_marginStart="@dimen/_15sdp">
        </ImageView>

        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/ic_camera"
            app:tint="@color/colorIcons"
            android:layout_marginStart="@dimen/_15sdp">
        </ImageView>

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/ic_add_link"
            app:tint="@color/colorIcons"
            android:layout_marginStart="@dimen/_15sdp">
        </ImageView>

    </LinearLayout>
    
    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background_add_button"
        android:src="@drawable/add_no_outline"
        android:layout_marginEnd="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintEnd_toEndOf="@id/layoutQuickAction"
        app:layout_constraintTop_toTopOf="@id/layoutQuickAction">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>